Updated css and index.

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@ Guillermo Perez
         subject
         text area, submit button -->
 
-Please fill out the form below. We respond to all inquiries within 24 hours.
+<p>Please fill out the form below. We respond to all inquiries within 24 hours.</p>
 
 <form action="http://fvi-grad.com:4004/email" method="POST">
     <input type="text" name="dest_email" placeholder="Destination E-mail" />
-    <input type="text" name="full_name" />
-    <input type="text" name="phone" />
-    <input type="text" name="ddate" />
-    <input type="text" name="time" />
-    <input type="text" name="email" />
-    <input type="text" name="subject" />
-    <textarea name="message" id="" cols="30" rows="10"></textarea>
+    <input type="text" name="full_name" placeholder="First and last name"/>
+    <input type="text" name="phone" placeholder="Phone no." />
+    <input type="text" name="ddate" placeholder="Date" />
+    <input type="text" name="time" placeholder="Time" />
+    <input type="text" name="email" placeholder="gperez@techlaunch.io" />
+    <input type="text" name="subject" placeholder="Subject" />
+    <textarea name="message" id="" cols="30" rows="10" placeholder="Enter inquiry here."></textarea>
     <input type="submit" value="Submit"/>
 </form>
     </div>
